# refact

./: .gitignore  AGENTS.md  CHANGES.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  install.ps1  install.sh  test_tempfile.rs
refact-agent/engine/: AGENTS.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  build.rs
refact-agent/engine/.cargo/: config.toml
refact-agent/engine/assets/chat/: index.html
refact-agent/engine/crates/refact-agentic/: Cargo.toml
refact-agent/engine/crates/refact-agents-core/: Cargo.toml
refact-agent/engine/crates/refact-ast/: Cargo.toml
refact-agent/engine/crates/refact-at-web/: Cargo.toml
refact-agent/engine/crates/refact-browser/: Cargo.toml
refact-agent/engine/crates/refact-buddy-api/: Cargo.toml
refact-agent/engine/crates/refact-buddy-core/: Cargo.toml
refact-agent/engine/crates/refact-buddy-opportunity-core/: Cargo.toml
refact-agent/engine/crates/refact-caps-core/: Cargo.toml
refact-agent/engine/crates/refact-chat-api/: Cargo.toml
refact-agent/engine/crates/refact-chat-history/: Cargo.toml
refact-agent/engine/crates/refact-codegraph/: Cargo.toml
refact-agent/engine/crates/refact-codegraph-parsers/: Cargo.toml
refact-agent/engine/crates/refact-codehealth/: Cargo.toml
refact-agent/engine/crates/refact-codewiki/: Cargo.toml
refact-agent/engine/crates/refact-core/: Cargo.toml
refact-agent/engine/crates/refact-exec/: Cargo.toml
refact-agent/engine/crates/refact-ext/: Cargo.toml
refact-agent/engine/crates/refact-files/: Cargo.toml
refact-agent/engine/crates/refact-git-intel/: Cargo.toml
refact-agent/engine/crates/refact-integrations/: Cargo.toml
refact-agent/engine/crates/refact-knowledge-graph/: Cargo.toml
refact-agent/engine/crates/refact-postprocessing/: Cargo.toml
refact-agent/engine/crates/refact-scratchpads/: Cargo.toml
refact-agent/engine/crates/refact-self-update/: Cargo.toml  build.rs
refact-agent/engine/crates/refact-stats/: Cargo.toml
refact-agent/engine/crates/refact-tasks/: Cargo.toml
refact-agent/engine/crates/refact-tui/: Cargo.toml  README.md
refact-agent/engine/crates/refact-vecdb/: Cargo.toml
refact-agent/engine/crates/refact-yaml-configs/: Cargo.toml
refact-agent/engine/src/: app_state.rs  background_tasks.rs  call_validation.rs  cli_dispatch.rs  daemon_link.rs  fetch_embedding.rs  files_blocklist.rs  files_correction.rs  files_in_jsonl.rs  files_in_workspace.rs  forward_to_openai_endpoint.rs  fuzzy_search.rs  global_context.rs  http.rs  indexing_routing.rs  indexing_utils.rs  knowledge_index.rs  known_models.json  lib.rs  lsp.rs  main.rs  memories.rs  privacy.rs  restream.rs  self_update.rs  subchat.rs  tokens.rs  trajectory_memos.rs
refact-agent/engine/src/agentic/: compress_trajectory.rs  generate_code_edit.rs  generate_commit_message.rs  generate_follow_up_message.rs  mode_transition.rs
refact-agent/engine/src/agents/: mod.rs  monitor.rs  push.rs  registry.rs  spawn.rs  tests.rs  types.rs
refact-agent/engine/src/ast/: ast_indexer_thread.rs  chunk_utils.rs  file_splitter.rs  mod.rs
refact-agent/engine/src/at_commands/: at_ast_definition.rs  at_commands.rs  at_file.rs  at_search.rs  at_tree.rs  at_web.rs  at_web_search.rs  execute_at.rs  mod.rs
refact-agent/engine/src/buddy/: actor.rs  autonomous_workflows.rs  briefing.rs  chat_reactions.rs  conversation_ledger.rs  diagnostics.rs  drafts.rs  events.rs  facts.rs  humor.rs  issues.rs  memory_lifecycle.rs  mod.rs  opportunities.rs  policy.rs  pulse.rs  pulse_inject.rs  receipts.rs  runtime_queue.rs  scheduler.rs  settings.rs  snapshot.rs  speech_policy.rs  state.rs  storage.rs  tests.rs  types.rs  user_activity.rs  voice_service.rs  workflows.rs
refact-agent/engine/src/caps/: caps.rs  model_caps.rs  models_dev.rs  providers.rs  self_hosted.rs
refact-agent/engine/src/chat/: browser_context.rs  cache_diagnostics.rs  cache_guard.rs  cloud_token_count.rs  config.rs  content.rs  diagnostics.rs  generation.rs  goal_monitor.rs  goal_role.rs  goal_verifier.rs  handlers.rs  history_limit.rs  internal_roles.rs  linearize.rs  mod.rs  notifications.rs  openai_convert.rs  openai_merge.rs  plan_role.rs  post_merge_check.rs  prepare.rs  prompt_snippets.rs  prompts.rs  queue.rs  retry_policy.rs  session.rs  session_runtime.rs  stream_core.rs  summarization.rs  system_context.rs  task_agent_monitor.rs  task_agent_monitor_tests.rs  tests.rs  tool_call_recovery.rs  tool_call_recovery_oss.rs  tools.rs  trajectories.rs  trajectory_index.rs  trajectory_ops.rs  (+4 more)
refact-agent/engine/src/codegraph/: cg_highlev.rs  cg_status.rs  mod.rs
refact-agent/engine/src/daemon/: auth.rs  chat_client.rs  cli.rs  client.rs  config.rs  cron_clock.rs  doctor.rs  events.rs  fs_browse.rs  hooks.rs  idle.rs  lock.rs  mdns.rs  mod.rs  paths.rs  ports.rs  projects.rs  proxy.rs  resources.rs  run_cmd.rs  server.rs  state.rs  supervisor.rs  web.rs  web_picker.html
refact-agent/engine/src/exec/: mod.rs  pty.rs  registry.rs  spawn.rs  spill.rs  transcript.rs  types.rs
refact-agent/engine/src/ext/: config_dirs.rs  extensions_marketplace.rs  hooks.rs  hooks_runner.rs  mod.rs  plugins.rs  skills.rs  skills_context.rs  skills_matcher.rs  slash_commands.rs  slash_expand.rs  yaml_util.rs
refact-agent/engine/src/git/: checkpoints.rs  cleanup.rs  commit_info.rs  mod.rs  operations.rs
refact-agent/engine/src/http/: routers.rs  utils.rs
refact-agent/engine/src/integrations/: browser_actions.rs  browser_controller.rs  browser_locators.rs  browser_models.rs  browser_recorder.js  browser_runtime.rs  browser_toolbar.js  browser_types.rs  config_chat.rs  (+18 more)
refact-agent/engine/tests/: daemon_e2e.rs  daemon_proxy.rs  daemon_supervisor.rs  fake_worker.py  mcp_stdio_e2e.rs  test_create_task_with_planner.py  test_file.py  test_hidden_roles_e2e.py  test_knowledge_cache_invalidation.md  test_knowledge_graph_content_param.py  test_knowledge_ops.py  test_task_agent_failure.py  test_task_schema.rs  test_tasks_storage.rs  test_tasks_system.rs
refact-agent/engine/tools/: compile_bench.sh  update-gui-assets.sh  update_models_dev_snapshot.py
(+3584 files in other folders)
