[workspace]
members = [
    ".",
    "crates/refact-core",
    "crates/refact-chat-api",
    "crates/refact-vecdb",
    "crates/refact-codegraph-parsers",
    "crates/refact-codegraph",
    "crates/refact-codehealth",
    "crates/refact-git-intel",
    "crates/refact-codewiki",
    "crates/refact-llm",
    "crates/refact-knowledge-graph",
    "crates/refact-git",
    "crates/refact-postprocessing",
    "crates/refact-stats",
    "crates/refact-scratchpads",
    "crates/refact-providers",
    "crates/refact-tool-api",
    "crates/refact-chat-history",
    "crates/refact-integrations",
    "crates/refact-browser",
    "crates/refact-ext",
    "crates/refact-yaml-configs",
    "crates/refact-worktrees",
    "crates/refact-agentic",
    "crates/refact-files",
    "crates/refact-tasks",
    "crates/refact-buddy-core",
    "crates/refact-file-edit-core",
    "crates/refact-at-web",
    "crates/refact-pricing-core",
    "crates/refact-scope-utils",
    "crates/refact-caps-core",
    "crates/refact-voice",
    "crates/refact-context-api",
    "crates/refact-runtime-api",
    "crates/refact-exec",
    "crates/refact-agents-core",
    "crates/refact-self-update",
    "crates/refact-tui",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["rc", "derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1.43.0", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread", "signal", "process"] }
tracing = "0.1"
heed = "0.22.0"
indexmap = { version = "1.9.1", features = ["serde-1"] }
itertools = "0.14.0"
lazy_static = "1.4.0"
md5 = "0.7"
regex = "1.9.5"
ropey = "1.6"
serde_cbor = "0.11.2"
tempfile = "3.8.1"
tokenizers = "0.21.0"
tree-sitter = "0.25"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
#debug = true
strip = true
opt-level = "z"
lto = true

[profile.ci-release]
inherits = "release"
strip = false
lto = "thin"
codegen-units = 16

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.dev.build-override]
debug = false

# Keep CodeGraph's parser and SQLite dependencies optimized in dev builds so
# target/debug/refact-lsp indexes source at near-release speed while workspace
# crates remain debuggable. Add new tree-sitter grammar crates here.
[profile.dev.package.libsqlite3-sys]
opt-level = 3

[profile.dev.package.rusqlite]
opt-level = 3

[profile.dev.package.sqlite-vec]
opt-level = 3

[profile.dev.package.tokio-rusqlite]
opt-level = 3

[profile.dev.package.tree-sitter]
opt-level = 3

[profile.dev.package.tree-sitter-bash]
opt-level = 3

[profile.dev.package.tree-sitter-c]
opt-level = 3

[profile.dev.package.tree-sitter-c-sharp]
opt-level = 3

[profile.dev.package.tree-sitter-cpp]
opt-level = 3

[profile.dev.package.tree-sitter-elixir]
opt-level = 3

[profile.dev.package.tree-sitter-go]
opt-level = 3

[profile.dev.package.tree-sitter-haskell]
opt-level = 3

[profile.dev.package.tree-sitter-java]
opt-level = 3

[profile.dev.package.tree-sitter-javascript]
opt-level = 3

[profile.dev.package.tree-sitter-kotlin-ng]
opt-level = 3

[profile.dev.package.tree-sitter-language]
opt-level = 3

[profile.dev.package.tree-sitter-ocaml]
opt-level = 3

[profile.dev.package.tree-sitter-php]
opt-level = 3

[profile.dev.package.tree-sitter-python]
opt-level = 3

[profile.dev.package.tree-sitter-ruby]
opt-level = 3

[profile.dev.package.tree-sitter-rust]
opt-level = 3

[profile.dev.package.tree-sitter-scala]
opt-level = 3

[profile.dev.package.tree-sitter-swift]
opt-level = 3

[profile.dev.package.tree-sitter-typescript]
opt-level = 3

[package]
name = "refact-lsp"
version = "8.2.7"
edition = "2021"
build = "build.rs"

[lib]
name = "refact_lsp"
path = "src/lib.rs"

[[bin]]
name = "refact-lsp"
path = "src/main.rs"
test = false
bench = false

[[bin]]
name = "refact"
path = "src/bin/refact.rs"
test = false
bench = false

[features]
default = ["voice"]
voice = ["refact-voice/voice"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
shadow-rs = "1.1.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[target.'cfg(not(windows))'.dependencies]
pnet_datalink = "0.35.0"

[dependencies]

# Pinned transitive dep (via rustls -> aws-lc-rs): aws-lc-sys 0.42.0's build script
# aborts with a false-positive "COMPILER BUG DETECTED" (gcc bug 95189) on the CI
# toolchain, breaking the x86_64-unknown-linux-gnu engine build. 0.38.0 builds cleanly
# and is compatible with aws-lc-rs 1.16.x. Cargo.lock is gitignored, so pin here.
aws-lc-sys = "=0.38.0"

refact-core = { path = "crates/refact-core" }
refact-chat-api = { path = "crates/refact-chat-api" }
refact-vecdb = { path = "crates/refact-vecdb" }
refact-codegraph = { path = "crates/refact-codegraph" }
refact-codegraph-parsers = { path = "crates/refact-codegraph-parsers" }
refact-codehealth = { path = "crates/refact-codehealth" }
refact-git-intel = { path = "crates/refact-git-intel" }
refact-codewiki = { path = "crates/refact-codewiki" }
refact-llm = { path = "crates/refact-llm" }
refact-knowledge-graph = { path = "crates/refact-knowledge-graph" }
refact-git = { path = "crates/refact-git" }
refact-postprocessing = { path = "crates/refact-postprocessing" }
refact-stats = { path = "crates/refact-stats" }
refact-scratchpads = { path = "crates/refact-scratchpads" }
refact-providers = { path = "crates/refact-providers" }
refact-tool-api = { path = "crates/refact-tool-api" }
refact-chat-history = { path = "crates/refact-chat-history" }
refact-integrations = { path = "crates/refact-integrations" }
refact-browser = { path = "crates/refact-browser" }
refact-ext = { path = "crates/refact-ext" }
refact-yaml-configs = { path = "crates/refact-yaml-configs" }
refact-worktrees = { path = "crates/refact-worktrees" }
refact-agentic = { path = "crates/refact-agentic" }
refact-files = { path = "crates/refact-files" }
refact-tasks = { path = "crates/refact-tasks" }
refact-buddy-core = { path = "crates/refact-buddy-core" }
refact-file-edit-core = { path = "crates/refact-file-edit-core" }
refact-at-web = { path = "crates/refact-at-web" }
refact-pricing-core = { path = "crates/refact-pricing-core" }
refact-scope-utils = { path = "crates/refact-scope-utils" }
refact-caps-core = { path = "crates/refact-caps-core" }
refact-voice = { path = "crates/refact-voice" }
refact-context-api = { path = "crates/refact-context-api", features = ["http-client"] }
refact-runtime-api = { path = "crates/refact-runtime-api" }
refact-exec = { path = "crates/refact-exec" }
refact-agents-core = { path = "crates/refact-agents-core" }
refact-self-update = { path = "crates/refact-self-update" }
refact-tui = { path = "crates/refact-tui" }

astral-tokio-tar = "0.5.2"
axum = { version = "0.6.20", features = ["default", "http2"] }
async-stream = "0.3.5"
async-trait = "0.1.73"
backtrace = "0.3.71"
base64 = "0.22.1"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.12"
iana-time-zone = "0.1"
diff = "0.1.13"
dunce = "1.0.5"
fd-lock = "4.0.4"
dyn_partial_eq = "=0.1.2"
filetime = "0.2.25"
futures = "0.3"
git2 = "0.20.2"
glob = "0.3.1"
hashbrown = "0.15.2"
headless_chrome = "1.0.16"
heed = "0.22.0"
home = "0.5"
hostname = "0.4"
html2text = "0.12.5"
humantime = "2.1"
hyper = { version = "0.14", features = ["server", "stream"] }
image = "0.25.2"
indexmap = { version = "1.9.1", features = ["serde-1"] }
itertools = "0.14.0"
lazy_static = "1.4.0"
libc = "0.2"
libsqlite3-sys = "0.28.0"
log = "0.4.20"
md5 = "0.7"
mdns-sd = "0.20.0"
notify = { version = "8.0.0", features = ["serde"] }
parking_lot = { version = "0.12.1", features = ["serde"] }
portable-pty = "0.9"
process-wrap = { version = "8.0.2", features = ["tokio1"] }
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.9.5"
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "stream", "rustls", "charset", "http2"] }
eventsource-stream = "0.2"
flate2 = "1.0"
resvg = "0.44.0"
ropey = "1.6"
rusqlite = { version = "0.31.0", features = ["bundled"] }
rust-embed = "8.5.0"
percent-encoding = "2.3"
serde = { version = "1", features = ["rc", "derive"] }
serde_cbor = "0.11.2"
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9.31"
# all features = ["compression", "docs", "event_log", "failpoints", "io_uring", "lock_free_delays", "measure_allocs", "miri_optimizations", "mutex", "no_inline", "no_logs", "pretty_backtrace", "testing"]
shadow-rs = { version = "1.1.0", features = [], default-features = false }
sha2 = "0.10.8"
hex = "0.4.3"
shell-words = "1.1.0"
shell-escape = "0.1.5"
select = "0.6.0"
similar = "2.3.0"
sqlite-vec = { version = "0.1.6" }
strip-ansi-escapes = "0.2.1"
strsim = "0.11.1"
structopt = "0.3"
tempfile = "3.8.1"
tokenizers = "0.21.0"
tokio = { version = "1.43.0", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread", "signal", "process"] }
tokio-rusqlite = "0.5.0"
tokio-util = { version = "0.7.12", features = ["compat"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-webpki-roots"] }
tar = "0.4"
tower-http = { version = "0.4.0", features = ["cors"] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tree-sitter = "0.25"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
typetag = "0.2"
unicode-width = "0.2"
url = "2.4.1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
walkdir = "2.3"
which = "7.0.2"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
petgraph = "0.6"
zerocopy = "0.8.14"

# There you can use a local copy
# rmcp = { path = "../../../rust-sdk/crates/rmcp/", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "auth"] }
# Pinned to a known-good rmcp rev because upstream main drifts and Cargo.lock is gitignored.
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "63583b164f54ec6ed2f17c98450487c747d34aeb", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "auth"] }
oauth2 = { version = "5.0", default-features = false }
thiserror = "2.0.12"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"
insta = "1.34"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serial_test = "3"
tower = { version = "0.4", features = ["util"] }
tokio = { workspace = true, features = ["test-util"] }
