[package]
name = "refact-agents-core"
version = "0.1.0"
edition = "2021"

[dependencies]
refact-chat-api = { path = "../refact-chat-api" }
chrono = { version = "0.4.31", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
