[package]
name = "refact-ast"
version = "0.1.0"
edition = "2021"

[dependencies]
refact-core = { path = "../refact-core" }
heed.workspace = true
indexmap.workspace = true
itertools.workspace = true
lazy_static.workspace = true
md5.workspace = true
regex.workspace = true
ropey.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokenizers.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-java.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-kotlin-ng.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
uuid.workspace = true
async-trait = "0.1.73"
dyn_partial_eq = "=0.1.2"
parking_lot = { version = "0.12.1", features = ["serde"] }
sha2 = "0.10.8"
similar = "2.3.0"
strsim = "0.11.1"
tokio = { version = "1.43.0", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread", "signal", "process"] }
typetag = "0.2"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
