[package]
name = "refact-buddy-core"
version = "0.1.0"
edition = "2021"

[dependencies]
refact-core = { path = "../refact-core" }
refact-ext = { path = "../refact-ext" }
chrono = { version = "0.4.31", features = ["serde"] }
hex = "0.4.3"
indexmap.workspace = true
rand = "0.8.5"
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"
serde_yaml = "0.9.31"
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.8.1"
