[package]
name = "refact-chat-api"
version = "0.1.0"
edition = "2021"

[dependencies]
refact-core = { path = "../refact-core" }
chrono = { version = "0.4.31", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
uuid.workspace = true
regex.workspace = true
