[package]
name = "refact-codegraph-parsers"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-kotlin-ng = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-go = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-scala = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-c = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-elixir = "0.3"
tree-sitter-ocaml = "0.24"
tree-sitter-haskell = "0.23"
