[package]
name = "refact-codegraph"
version = "0.1.0"
edition = "2021"

[dependencies]
refact-codegraph-parsers = { path = "../refact-codegraph-parsers" }
refact-core = { path = "../refact-core" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
rusqlite = { version = "0.31.0", features = ["bundled"] }
petgraph = "0.6"

[features]
code_embeddings = []
