[package]
name = "refact-codegraph"
version = "0.1.0"
edition = "2021"

[dependencies]
refact-codegraph-parsers = { path = "../refact-codegraph-parsers" }
refact-git-intel = { path = "../refact-git-intel" }
refact-core = { path = "../refact-core" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
sha2 = "0.10.8"
hex = "0.4.3"
rusqlite = { version = "0.31.0", features = ["bundled"] }
petgraph = "0.6"

[dev-dependencies]
tempfile = { workspace = true }

[features]
code_embeddings = []
