[package]
name = "refact-ext"
version = "0.1.0"
edition = "2021"

[dependencies]
refact-core = { path = "../refact-core" }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.31"
tokio.workspace = true
tracing.workspace = true
home = "0.5"
sha2 = "0.10.8"
chrono = { version = "0.4.31", features = ["serde"] }
regex.workspace = true
walkdir = "2.3"
dunce = "1.0.5"
uuid.workspace = true
hex = "0.4.3"

[dev-dependencies]
tempfile = "3.8.1"
