[package]
name = "refact-integrations"
version = "0.1.0"
edition = "2021"

[dependencies]
refact-core = { path = "../refact-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
indexmap.workspace = true
chrono = { version = "0.4.31", features = ["serde"] }
home = "0.5"
libc = "0.2"
strip-ansi-escapes = "0.2.1"
which = "7.0.2"

[dev-dependencies]
tempfile.workspace = true
