[package]
name = "refact-knowledge-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
refact-core = { path = "../refact-core" }

serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

petgraph = "0.6"
walkdir = "2.3"
chrono = { version = "0.4.31", features = ["serde"] }
