[package]
name = "refact-postprocessing"
version = "0.1.0"
edition = "2021"

[dependencies]
refact-core = { path = "../refact-core" }
refact-ast = { path = "../refact-ast" }
serde.workspace = true
serde_json.workspace = true
tokenizers.workspace = true
tokio.workspace = true
tracing.workspace = true
indexmap.workspace = true
regex.workspace = true
async-trait = "0.1.73"
