[package]
name = "refact-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
refact-core = { path = "../refact-core" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
