[package]
name = "refact-vecdb"
version = "0.1.0"
edition = "2021"

[dependencies]
refact-core = { path = "../refact-core" }

async-trait = "0.1.73"
chrono = { version = "0.4.31", features = ["serde"] }
indexmap.workspace = true
itertools.workspace = true
log = "0.4.20"
md5.workspace = true
regex.workspace = true
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls", "charset", "http2"] }
ropey.workspace = true
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sqlite-vec = { version = "0.1.6" }
tokio.workspace = true
tokio-rusqlite = "0.5.0"
tokenizers.workspace = true
tracing.workspace = true
uuid.workspace = true
zerocopy = "0.8.14"
